After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785367 - Compile error in mxfdemux.c with GCC 4.8.4 on Ubuntu Trusty
Compile error in mxfdemux.c with GCC 4.8.4 on Ubuntu Trusty
Status: VERIFIED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-24 19:01 UTC by U. Artie Eoff
Modified: 2017-07-25 15:02 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description U. Artie Eoff 2017-07-24 19:01:05 UTC
mxfdemux.c: In function 'gst_mxf_demux_update_tracks':
mxfdemux.c:919:3: error: missing braces around initializer [-Werror=missing-braces]
   GstVideoTimeCode start_timecode = { 0, };
   ^
mxfdemux.c:919:3: error: (near initialization for 'start_timecode.config') [-Werror=missing-braces]
cc1: all warnings being treated as errors
make[3]: *** [libgstmxf_la-mxfdemux.lo] Error 1

First bad commit:

commit 26d5ba42eaa4298818fc0b38d7a61e7d769c0611
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Jul 24 16:49:19 2017 +0300

    mxfdemux: Output timecodes for video streams
Comment 1 Sebastian Dröge (slomo) 2017-07-25 07:04:09 UTC
commit 444776ae1032670077ba246ac989cf1fa09b426f (HEAD -> master, origin/master, origin/HEAD)
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Tue Jul 25 10:03:25 2017 +0300

    mxfdemux: Fix compilation with gcc 4.8.4
    
    https://bugzilla.gnome.org/show_bug.cgi?id=785367
Comment 2 U. Artie Eoff 2017-07-25 15:02:08 UTC
Thanks!