mxfdemux: Fix compilation with gcc 4.8.4

https://bugzilla.gnome.org/show_bug.cgi?id=785367